configuration/kubectl/manifest/templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:latest
    imagePullPolicy: Always
    ports:
      - containerPort: 80

    resources:
      limits:
        memory: 512Mi
        cpu: "1"
      requests:
        memory: 256Mi
        cpu: "0.2"

    readinessProbe:
      httpGet:
        path: /index.html
        port: 80
      initialDelaySeconds: 30
      periodSeconds: 10
    livenessProbe:
      httpGet:
        path: /index.html
        port: 80
      initialDelaySeconds: 30
      periodSeconds: 10
      timeoutSeconds: 5

    volumeMounts:
    - name: config-file
      mountPath: /path/config/
    - name: secret-file
      mountPath: /path/secret/

  volumes:
    - name: config-file
      configMap:
        name: my-configmap
    - name: secret-file
      secret:
        secretName: my-secret
  
  containerLogMaxSize: 10Mi
  containerLogMaxFiles: 7

  imagePullSecrets:
    - name: private-registry
